Fixing the css a bit to make it more mobile friendly

--- a/css/ipsum.css
+++ b/css/ipsum.css
@@ -14,20 +14,29 @@ body {
   font-family: 'OldeEnglish', Fallback, sans-serif;
   font-size: 4em;
   font-weight: 400;
+  width: 300px;
+  white-space: nowrap;
+}
+
+.column {
+  margin: 0 50px;
 }
 
 .container {
-  margin-top: 1em;
   width: 2000px;
 }
 
 .form-control {
   background-color:rgba(255,0,0,0.0);
-  width: 50%;
+  max-width: 50%;
   display: inline;
   border: none;
   color: rgba(250, 250, 250, .75);
   font-size: 3em;
+}
+
+#sel2{
+  max-width: 30%;
 }
 
 button.generateIpsumButton {
@@ -44,6 +53,8 @@ button.generateIpsumButton {
   font-family: serif;
   height: 18em;
   overflow: auto;
+  margin-bottom: 5%;
+  margin-top: 5%;
 }
 
 .container {
@@ -52,13 +63,14 @@ button.generateIpsumButton {
 
 .generatedTextRow {
   display: none;
-  margin-top: 10%;
   overflow-y: hidden;
 }
 
 #sel1 {
   height: 2em;
   font-size: 3em;
+  display: inline-block;
+  min-width: 200px;
 }
 
 option {
