--- a/css/ipsum.css
+++ b/css/ipsum.css
@@ -8,6 +8,7 @@ body {
   color: rgba(250, 250, 250, .75);
   margin: 1.5em;
   font-family: 'OldeEnglish', Fallback, sans-serif;
+
 }
 
 .title {
@@ -24,6 +25,7 @@ body {
 
 .container {
   width: 2000px;
+  max-height: 100%;
 }
 
 .form-control {
