--- a/css/ipsum.css
+++ b/css/ipsum.css
@@ -8,7 +8,7 @@ body {
   color: rgba(250, 250, 250, .75);
   margin: 1.5em;
   font-family: 'OldeEnglish', Fallback, sans-serif;
-
+  max-height: 100%;
 }
 
 .title {
@@ -53,7 +53,7 @@ button.generateIpsumButton {
 .generatedText {
   font-size: 2em;
   font-family: serif;
-  height: 18em;
+  height: 15em;
   overflow: auto;
   margin-bottom: 5%;
   margin-top: 5%;
